fixed overflow behaviour for grid tool-bar and other cases (there are issues in 'All' story)

--- a/packages/components/tool-bar/src/tool-bar.scss
+++ b/packages/components/tool-bar/src/tool-bar.scss
@@ -3,6 +3,7 @@
   background: transparent;
   display: flex;
   flex-wrap: nowrap;
+  min-inline-size: 0;
 }
 
 :host([align='end']) [part='wrapper'] {
